--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div id="app">
       <div class="container col-5 mt-5">
-        <form class="form-signin" @submit.prevent="signin" method="POST">
+        <form class="form-signin" @submit.prevent="signin">
           <div class="text-center mb-4">
             <h1 class="h3 my-3 font-weight-normal">Sign In</h1>
           </div>
