--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/all.css" />
+    <link rel="stylesheet" href="./css/all.css"" />
   </head>
 
   <body>
@@ -453,6 +453,6 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script type="module" src="/js/products.js"></script>
+    <script type="module" src="./js/products.js"></script>
   </body>
 </html>
