--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script type="module" src="/js/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
