--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <div class="form-label-group">
             <label for="inputEmail">Email</label>
             <input
+              id="inputEmail"
               type="text"
               name="email"
               class="form-control"
@@ -38,6 +39,7 @@
           <div class="form-label-group">
             <label for="inputPassword">Password</label>
             <input
+              id="inputPassword"
               type="password"
               name="password"
               class="form-control"
