--- a/index.html
+++ b/index.html
@@ -18,45 +18,77 @@
 
   <body>
     <div id="app">
-      <div class="container col-5 mt-5">
-        <form class="form-signin" @submit.prevent="signin">
-          <div class="text-center mb-4">
-            <h1 class="h3 my-3 font-weight-normal">Sign In</h1>
+      <div class="container mt-5">
+        <div class="card col-md-12 mt-5 a">
+          <div class="row">
+            <div class="col-md-6 float-left mt-2">
+              <div style="position: relative;">
+                <img
+                  class="img-fluid"
+                  src="https://images.unsplash.com/photo-1497515114629-f71d768fd07c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1062&q=80"
+                  alt=""
+                  width="100%"
+                  height="500px"
+                  class="rounded"
+                />
+                <div
+                  style="
+                    position: absolute;
+                    left: 250px;
+                    top: 200px;
+                    width: 200px;
+                    height: 100px;
+                    background-color: #fff;
+                    opacity: 0.7;
+                  "
+                >
+                  <h2 class="pl-2">Coffee</h2>
+                  <h4 class="pl-4">管理者登入</h4>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 float-right mt-2">
+              <form class="form-signin" @submit.prevent="signin">
+                <div class="text-center mb-4">
+                  <h1 class="h3 my-3 font-weight-normal">Sign In</h1>
+                </div>
+                <div class="form-label-group">
+                  <label for="inputEmail">Email</label>
+                  <input
+                    id="inputEmail"
+                    type="text"
+                    name="email"
+                    class="form-control"
+                    placeholder="Email"
+                    v-model="user.email"
+                    required
+                    autofocus
+                  />
+                </div>
+                <div class="form-label-group">
+                  <label for="inputPassword">Password</label>
+                  <input
+                    id="inputPassword"
+                    type="password"
+                    name="password"
+                    class="form-control"
+                    placeholder="Password"
+                    v-model="user.password"
+                    required
+                  />
+                </div>
+                <br />
+                <button
+                  class="btn btn-lg btn-primary btn-block mb-4"
+                  type="submit"
+                  :disabled="isProcessing"
+                >
+                  登入
+                </button>
+              </form>
+            </div>
           </div>
-          <div class="form-label-group">
-            <label for="inputEmail">Email</label>
-            <input
-              id="inputEmail"
-              type="text"
-              name="email"
-              class="form-control"
-              placeholder="Email"
-              v-model="user.email"
-              required
-              autofocus
-            />
-          </div>
-          <div class="form-label-group">
-            <label for="inputPassword">Password</label>
-            <input
-              id="inputPassword"
-              type="password"
-              name="password"
-              class="form-control"
-              placeholder="Password"
-              v-model="user.password"
-              required
-            />
-          </div>
-          <br />
-          <button
-            class="btn btn-lg btn-primary btn-block mb-4"
-            type="submit"
-            :disabled="isProcessing"
-          >
-            登入
-          </button>
-        </form>
+        </div>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
